# data_crawling

./: README.md  bs4_test.ipynb  convert_slides.py  figma_import_version.html  main.py  naver_crawling_.json  pyproject.toml  test.html  test.ipynb  wow.html  시도별 충전소 설치 현황.csv
1week/: naver_crowl.ipynb  public_crawling.ipynb  화재_naver_news.json
2week_html_parsing/: bs4_tuto.ipynb  coffeebean_store.csv  hollys_crawl.ipynb  hollys_crawling.csv  selenium_tuto.ipynb
4week/: CGJchicken.ipynb  cheogajip.csv  kakoMapAPI.ipynb  map.html  맛집  서경대맛집_places.csv  서경대맛집_places_map.html
5week_regression_analysis/: 10장_미세먼지회귀분석.ipynb  10장_자동차연비분석.ipynb  auto-mpg.csv  대기오염데이터_종로구_20220401_20240215.csv
6week/: 11장_(2)로지스틱회귀분석.ipynb  12장_k-평균군집화분석.ipynb
7week/: 14.ipynb  14장_(1)LSTM주가분석.ipynb  14장_CNN.ipynb  14장_data.csv
homework/: crawling.ipynb  crowling.ipynb  ex10.py  naver_crowling.json  pyproject.toml  seoul_data.xml
homework/ch5_example/: CRW_ex05-1_jindong.py  CRW_ex05-2_jindong.py  CRW_ex05-3_jindong.py  CRW_ex05-4_jindong.py  crawling.ipynb  fisrt.csv  main.py  pyproject.toml
homework/second/: test.ipynb
html_parsing_2week/: bs4_test.ipynb
web_service/: README.md  main.py  pdf_converter.py  requirements.txt
web_service/temp/03167a6a-7314-4fcd-8f68-5677866407c6/: slide_2.html
web_service/temp/6e7ddd6e-ac92-4f42-aac1-99270aa6dc1c/: slide_1.html  slide_2.html  slide_3.html  slide_4.html  slide_5.html  slide_6.html  slide_7.html  slide_8.html  slide_9.html
web_service/temp/7a0d1e64-60d4-488b-a9f2-91967c9cae6f/: slide_3.html  slide_4.html
(+5 files in other folders)
