[project]
name = "data-crowling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "folium>=0.20.0",
    "ipython>=9.7.0",
    "matplotlib>=3.10.7",
    "matplotlib-inline>=0.2.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
