[project]
name = "data-crowling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "folium>=0.20.0",
    "graphviz>=0.21",
    "ipython>=9.7.0",
    "matplotlib>=3.10.7",
    "matplotlib-inline>=0.2.1",
    "nbformat>=4.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pdfkit>=1.0.0",
    "playwright>=1.56.0",
    "plotly>=6.5.0",
    "prophet>=1.2.1",
    "pypdf>=6.3.0",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]
